<resources>
    <string name="app_name" translatable="false">Nmedia</string>
    <string name="nmedia" translatable="false">NMedia!</string>
    <string name="menu_image_description">Menu</string>
    <string name="avatar_description">avatar</string>
    <string name="baseline_favorite_24_xml">baseline_favorite_24.xml</string>
    <string name="baseline_share_24_xml">baseline_share_24.xml</string>
    <string name="baseline_visibility_24_xml">baseline_visibility_24.xml</string>
    <string name="counterLikes">123</string>
    <string name="counterShare">46</string>
    <string name="counterViews">576</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="description_post_save" translatable="false">Save</string>
    <string name="error_empty_content" translatable="false">Content can\'t be empty</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="description_post_no_edit" translatable="false">No edit</string>
    <string name="chooser_share_post" translatable="false">Share\n</string>
    <string name="play_video_description" />
    <string name="background_video_description">background_video</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_post" translatable="false">User %1$s added new post -> %2$s\ </string>
    <string name="empty" translatable="false">Loading</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="error_text" translatable="false">Something went wrong</string>
</resources>