<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/menu_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/post_avatar_drawable" />

    <TextView
        android:id="@+id/author"
        tools:text="@sample/posts.json/data/author"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageView
        android:id="@+id/menu"
        android:checkable="true"
        style="@style/Widget.App.MenuButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_description"
        app:tint="?colorControlNormal"
        app:icon="@drawable/baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        app:constraint_referenced_ids="menu,avatar,published"
        app:barrierDirection="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        android:autoLink="all"
        android:id="@+id/content"
        android:layout_marginTop="@dimen/common_spacing"
        tools:text="@sample/posts.json/data/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier2"
        app:constraint_referenced_ids="content"
        app:barrierDirection="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Widget.App.LikedButton"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/baseline_favorite_24_xml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier2"
        app:icon="@drawable/like_selector" />



    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/headerBarrier2"
        android:id="@+id/share"
        android:checkable="true"
        style="@style/Widget.App.SharedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/baseline_share_24_xml"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:icon="@drawable/baseline_share_24"/>


    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/headerBarrier2"
        android:id="@+id/views"
        style="@style/Widget.App.ViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/baseline_visibility_24_xml"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/baseline_visibility_24"/>



</androidx.constraintlayout.widget.ConstraintLayout>